# bluebubbles_py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
bluebubbles_py/: __main__.py  client.py
docs/: conf.py  events.rst  index.rst
