[tool.poetry]
name = "bluebubbles_py"
version = "0.1.0"
description = "Python API wrapper for BlueBubbles (https://bluebubbles.app)"
authors = ["Elliot Nash <elliotnash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
python-socketio = {extras = ["asyncio_client"], version = "^5.5.1"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.0.0"
pre-commit = "^2.17.0"

[tool.black]
line-length = 100
target-version = ['py10']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
